[package]
name = "s3s-codegen"
version = "0.0.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
scoped-writer = "0.3.0"
heck = "0.5.0"
nugine-rust-utils = "0.3.1"
std-next = "0.1.6"
numeric_cast = "0.3.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_urlencoded = "0.7.1"
s3s-model = { version = "0.11.0-rc.1", path = "../crates/s3s-model" }
http = "1.3.1"
