[package]
name = "s3s-codegen"
version = "0.0.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
scoped-writer = "0.3.0"
heck = "0.5.0"
std-next = "0.1.9"
numeric_cast = "0.3.0"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_urlencoded = "0.7.1"
s3s-model = { version = "0.12.0-rc.2", path = "../crates/s3s-model" }
http = "1.3.1"
