[package]
name = "s3s-aws"
version = "0.11.0-dev"
description = "S3 service adapter integrated with aws-sdk-s3"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.82"
aws-sdk-s3 = "1.51.0"
aws-smithy-runtime-api = { version = "1.7.2", features = ["client", "http-1x"] }
aws-smithy-types = { version = "1.2.6", features = ["http-body-1-x"] }
aws-smithy-types-convert = { version = "0.60.8", features = ["convert-time"] }
hyper = "1.4.1"
s3s = { version = "0.11.0-dev", path = "../s3s" }
sync_wrapper = "1.0.1"
tracing = "0.1.40"
transform-stream = "0.3.0"
