[package]
name = "s3s-aws"
version = "0.9.0"
edition = "2021"
description = "S3 service adapter integrated with aws-sdk-s3"
license = "Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/Nugine/s3s"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
async-trait = "0.1.73"
aws-sdk-s3 = ">=1.12.0,<1.56.0"
aws-smithy-http = { version = "0.60.2", features = ["event-stream"] }
aws-smithy-runtime-api = { version = "1.1.2", features = ["client", "http-02x"] }
aws-smithy-types = { version = "1.1.2", features = ["http-body-0-4-x"] }
aws-smithy-types-convert = { version = "0.60.2", features = ["convert-time"] }
bytes = "1.4.0"
futures = { version = "0.3.28", default-features = false, features = ["std"] }
http-body = "0.4.5"
hyper = "0.14.27"
s3s = { version = "0.9.0", path = "../s3s" }
sync_wrapper = "0.1.2"
tracing = "0.1.37"
transform-stream = "0.3.0"
