[package]
name = "s3s-aws"
version = "0.12.0-dev"
description = "S3 service adapter integrated with aws-sdk-s3"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
aws-sdk-s3 = "1.105.0"
aws-smithy-runtime-api = { version = "1.9.0", features = ["client", "http-1x"] }
aws-smithy-types = { version = "1.3.2", features = ["http-body-1-x"] }
aws-smithy-types-convert = { version = "0.60.9", features = ["convert-time"] }
hyper = "1.7.0"
s3s = { version = "0.12.0-dev", path = "../s3s" }
std-next = "0.1.9"
sync_wrapper = "1.0.2"
tracing = "0.1.41"
transform-stream = "0.3.1"
