[package]
name = "s3s-e2e"
version = "0.11.0"
description = "s3s test suite"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
s3s-test = { version = "0.11.0", path = "../s3s-test" }
tracing = "0.1.41"
aws-credential-types = "1.2.2"
aws-sdk-s3 = "1.80.0"
aws-sdk-sts = { version = "1.64.0", features = ["behavior-version-latest"] }

[dependencies.aws-config]
version = "1.6.1"
default-features = false
features = ["behavior-version-latest"]

[build-dependencies]
s3s-test = { version = "0.11.0", path = "../s3s-test" }
