[package]
name = "s3s-e2e"
version = "0.12.0-dev"
description = "s3s test suite"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
s3s-test = { version = "0.12.0-dev", path = "../s3s-test" }
tracing = "0.1.41"
aws-credential-types = "1.2.6"
aws-sdk-s3 = "1.105.0"
aws-sdk-sts = { version = "1.76.0", features = ["behavior-version-latest"] }

[dependencies.aws-config]
version = "1.8.6"
default-features = false
features = ["behavior-version-latest"]

[build-dependencies]
s3s-test = { version = "0.12.0-dev", path = "../s3s-test" }
