[package]
name = "s3s-fs"
version = "0.10.1-dev"
description = "An experimental S3 server based on file system"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "s3s-fs"
required-features = ["binary"]

[features]
binary = ["tokio/full", "dep:clap", "dep:tracing-subscriber", "dep:hyper-util"]

[dependencies]
async-trait = "0.1.73"
base64-simd = "0.8.0"
bytes = "1.4.0"
chrono = { version = "0.4.26", default-features = false, features = [
    "std",
    "clock",
] }
clap = { version = "4.3.21", optional = true, features = ["derive"] }
crc32c = "0.6.4"
futures = "0.3.28"
hex-simd = "0.8.0"
hyper-util = { version = "0.1.5", optional = true, features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
md-5 = "0.10.5"
mime = "0.3.17"
nugine-rust-utils = "0.3.1"
numeric_cast = "0.2.1"
path-absolutize = "3.1.0"
s3s = { version = "0.10.1-dev", path = "../s3s" }
serde_json = "1.0.104"
thiserror = "1.0.45"
time = "0.3.25"
tokio = { version = "1.31.0", features = ["fs", "io-util"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", optional = true, features = [
    "env-filter",
    "time",
] }
transform-stream = "0.3.0"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
anyhow = { version = "1.0.73", features = ["backtrace"] }
aws-config = { version = "1.1.2", default-features = false }
aws-credential-types = { version = "1.1.2", features = ["test-util"] }
aws-sdk-s3 = { version = "1.12.0", features = ["behavior-version-latest"] }
once_cell = "1.18.0"
s3s-aws = { version = "0.10.1-dev", path = "../s3s-aws" }
tokio = { version = "1.31.0", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }
