[package]
name = "s3s-fs"
version = "0.12.0-dev"
description = "An experimental S3 server based on file system"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "s3s-fs"
required-features = ["binary"]

[features]
binary = ["tokio/full", "dep:clap", "dep:tracing-subscriber", "dep:hyper-util"]

[dependencies]
async-trait = "0.1.89"
base64-simd = "0.8.0"
bytes = "1.10.1"
chrono = { version = "0.4.42", default-features = false, features = [
    "std",
    "clock",
] }
clap = { version = "4.5.47", optional = true, features = ["derive"] }
crc32c = "0.6.8"
futures = "0.3.31"
hex-simd = "0.8.0"
hyper-util = { version = "0.1.16", optional = true, features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
mime = "0.3.17"
std-next = "0.1.9"
numeric_cast = "0.3.0"
path-absolutize = "3.1.1"
s3s = { version = "0.12.0-dev", path = "../s3s" }
serde_json = "1.0.143"
thiserror = "2.0.16"
time = "0.3.43"
tokio = { version = "1.47.1", features = ["fs", "io-util"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", optional = true, features = [
    "env-filter",
    "time",
] }
transform-stream = "0.3.1"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
aws-config = { version = "1.8.6", default-features = false }
aws-credential-types = { version = "1.2.6", features = ["test-util"] }
aws-sdk-s3 = { version = "1.105.0", features = ["behavior-version-latest"] }
futures-util = "0.3.31"
hyper-util = { version = "0.1.16", features = ["server-auto", "server-graceful", "http1", "http2", "tokio"] }
once_cell = "1.21.3"
opendal = { version = "0.54.0", features = ["services-s3"] }
s3s-aws = { version = "0.12.0-dev", path = "../s3s-aws" }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time"] }
