[package]
name = "s3s-policy"
version = "0.11.0-dev"
description = "S3 Policy Language"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
indexmap = { version = "2.5.0", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
