[package]
name = "s3s-proxy"
version = "0.12.0-rc.1"
description = "S3 Proxy"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aws-config = { version = "1.8.7", default-features = false, features = [
    "behavior-version-latest",
] }
aws-credential-types = "1.2.6"
aws-sdk-s3 = "1.107.0"
clap = { version = "4.5.48", features = ["derive"] }
hyper-util = { version = "0.1.17", features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
s3s = { version = "0.12.0-rc.1", path = "../s3s" }
s3s-aws = { version = "0.12.0-rc.1", path = "../s3s-aws" }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time"] }
