[package]
name = "s3s-test"
version = "0.12.0-rc.1"
description = "s3s test suite"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time"] }
clap = { version = "4.5.48", features = ["derive"] }
dotenvy = "0.15.7"
serde_json = "1.0.145"
indexmap = "2.11.4"
colored = "3.0.0"
regex = "1.11.3"
backtrace = "0.3.76"
const-str = { version = "0.7.0", features = ["std", "proc"] }
