[package]
name = "s3s-wasm"
version = "0.0.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
futures = "0.3.31"
http = "1.3.1"
s3s = { version = "0.12.0-rc.2", path = "../s3s", default-features = false }

[lints]
workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.54"
