[package]
name = "s3s"
version = "0.12.0-dev"
description = "S3 Service Adapter"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
openssl = ["dep:openssl"]

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10.73", optional = true }

[dependencies]
arrayvec = "0.7.6"
async-trait = "0.1.89"
atoi = { version = "2.0.0", default-features = false }
base64-simd = "0.8.0"
bytes = "1.10.1"
bytestring = "1.4.0"
chrono = { version = "0.4.42", default-features = false }
crc32c = "0.6.8"
crc32fast = "1.5.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
hex-simd = "0.8.0"
hmac = "=0.13.0-pre.5"
http-body = "1.0.1"
http-body-util = "0.1.3"
httparse = "1.10.1"
hyper = { version = "1.7.0", features = ["http1", "server"] }
itoa = "1.0.15"
md-5 = "=0.10.6"
memchr = "2.7.5"
mime = "0.3.17"
nom = "7.1.3"
nugine-rust-utils = "0.3.1"
numeric_cast = "0.3.0"
pin-project-lite = "0.2.16"
quick-xml = { version = "0.37.5", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_urlencoded = "0.7.1"
sha1 = "=0.11.0-pre.5"
sha2 = "=0.11.0-pre.5"
smallvec = "1.15.1"
thiserror = "2.0.16"
time = { version = "0.3.43", features = ["formatting", "parsing", "macros"] }
tower = { version = "0.5.2", default-features = false }
tracing = "0.1.41"
transform-stream = "0.3.1"
urlencoding = "2.1.3"
zeroize = "1.8.1"
std-next = "0.1.9"
sync_wrapper = { version = "1.0.2", default-features = false }
tokio = { version = "1.47.1", features = ["time"] }
crc64fast-nvme = "1.2.0"
const-str = "0.7.0"
http = "1.3.1"
subtle = "2.6.1"

[dev-dependencies]
axum = "0.8.4"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
